--- a/technow/views/auth/login.hbs
+++ b/technow/views/auth/login.hbs
@@ -1,9 +1,9 @@
 
 <h2>Login</h2>
 
-<form action="/auth/login" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+<form action="/login" method="POST" id="form-container">
+  <label for="email">Email</label>
+  <input id="email" type="text" name="email" placeholder="JonSnow">
 
   <br><br>
 
