--- a/technow/views/auth/signup.hbs
+++ b/technow/views/auth/signup.hbs
@@ -1,8 +1,11 @@
 <h2>Signup</h2>
 
-<form action="/auth/signup" method="POST" id="form-container">
+<form action="/signup" method="POST" id="form-container">
   <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
+  <input id="username" type="text" name="username" placeholder="">
+<br><br>
+  <label for="email">Email</label>
+  <input id="email" type="text" name="email" placeholder="">
 
   <br><br>
 
