--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -11,9 +11,15 @@
 
   <nav>
     <a href="/">Home</a>
+    <a href="/login">Login</a>
+    <a href="/signup">Signup</a>
+    <a href="/logout">Logout</a>
+    <a href="/profile">profile</a>
+    <a href="/posts">posts</a>
+    {{!-- <a href="/">Home</a>
     <a href="/auth/login">Login</a>
     <a href="/auth/signup">Signup</a>
-    <a href="/auth/logout">Logout</a>
+    <a href="/auth/logout">Logout</a> --}}
   </nav>
 
   {{{body}}}
