--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -16,10 +16,7 @@
     <a href="/logout">Logout</a>
     <a href="/profile">profile</a>
     <a href="/posts">posts</a>
-    {{!-- <a href="/">Home</a>
-    <a href="/auth/login">Login</a>
-    <a href="/auth/signup">Signup</a>
-    <a href="/auth/logout">Logout</a> --}}
+    <a href="/products">posts</a>
   </nav>
 
   {{{body}}}
