--- a/technow/views/user/create-product.hbs
+++ b/technow/views/user/create-product.hbs
@@ -1,7 +1,7 @@
 <h2>Create product</h2>
 <div class="row">
   <div class="col-md-6">
-    <form action="/cp" method="post" enctype="multipart/form-data">
+    <form action="/create-productt" method="post" enctype="multipart/form-data">
 
       <div class="form-group">
         <label for="name">Name:</label>
