delete product and delete post

--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -16,7 +16,7 @@
     <a href="/logout">Logout</a>
     <a href="/profile">profile</a>
     <a href="/posts">posts</a>
-    <a href="/products">posts</a>
+    <a href="/products">products</a>
   </nav>
 
   {{{body}}}
