--- a/technow/views/user/edit-post.hbs
+++ b/technow/views/user/edit-post.hbs
@@ -1,7 +1,6 @@
 <h2>Edit post</h2>
 <div class="row">
   <div class="col-md-6">
-    
     <form action="/edit-post/{{_id}}" method="post" enctype="multipart/form-data">
 
       <div class="form-group">
@@ -20,7 +19,10 @@
         <input type="text" name="existingImage" hidden id="" value="{{imagePath}}">
       </div>
 
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <a href="/delete-post/{{_id}}">Delete post</a>
+      <br>
+      <br>
+      <button type="submit" class="btn btn-primary">Create</button>
     </form>
   </div>
 </div>
