added google auth

--- a/technow/views/auth/login.hbs
+++ b/technow/views/auth/login.hbs
@@ -22,4 +22,8 @@
     Don't have an account yet?
     <a href="/auth/signup">Signup</a>
   </p>
+  -OR-
+  <br>
+  <br>
+  <a href="/auth/google">Login with you Google Account</a>
 </form>
