--- a/technow/views/auth/signup.hbs
+++ b/technow/views/auth/signup.hbs
@@ -24,4 +24,8 @@
     Do you already have an account?
     <a href="/auth/login">Login</a>
   </p>
+  -OR-
+  <br>
+  <br>
+  <a href="/auth/google">Login with you Google Account</a>
 </form>
