public view for products and posts

--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -17,6 +17,8 @@
     <a href="/profile">profile</a>
     <a href="/posts">posts</a>
     <a href="/products">products</a>
+
+    {{!-- <a href="/posts">posts for the public</a> --}}
   </nav>
 
   {{{body}}}
