fb and google auth fixed

--- a/technow/views/auth/signup.hbs
+++ b/technow/views/auth/signup.hbs
@@ -28,4 +28,8 @@
   <br>
   <br>
   <a href="/auth/google">Login with you Google Account</a>
+
+
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login with fb
+</fb:login-button>
 </form>
