--- a/technow/views/auth/login.hbs
+++ b/technow/views/auth/login.hbs
@@ -26,4 +26,13 @@
   <br>
   <br>
   <a href="/auth/google">Login with you Google Account</a>
+  <br>
+  <a  href="/auth/facebook">Login with you facebook Account</a>
+{{!--   
+  <a class="btn btn-block btn-social btn-twitter">
+    <span class="fa fa-twitter"></span> Sign in with Twitter
+  </a> --}}
+
+{{!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login with fb
+</fb:login-button> --}}
 </form>
