--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="stylesheet" href="/stylesheets/bootstrap-social.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
 
@@ -15,8 +18,10 @@
     <a href="/signup">Signup</a>
     <a href="/logout">Logout</a>
     <a href="/profile">profile</a>
-    <a href="/posts">posts</a>
-    <a href="/products">products</a>
+    <a href="/posts">my posts</a>
+    <a href="/products">my products</a>
+    <a href="/allProducts">all products</a>
+    <a href="/allPosts">all posts</a>
 
     {{!-- <a href="/posts">posts for the public</a> --}}
   </nav>
@@ -24,5 +29,51 @@
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
+{{!-- <script>
+  window.fbAsyncInit = function () {
+    FB.init({
+      appId: '{your-app-id}',
+      cookie: true,
+      xfbml: true,
+      version: '{api-version}'
+    });
+
+    FB.AppEvents.logPageView();
+
+  };
+
+  (function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) { return; }
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+
+  FB.getLoginStatus(function (response) {
+    statusChangeCallback(response);
+  });
+
+
+  {
+    status: 'connected',
+      authResponse: {
+      accessToken: '...',
+        expiresIn: '...',
+          signedRequest: '...',
+            userID: '...'
+    }
+  }
+
+
+  function checkLoginState() {
+    FB.getLoginStatus(function (response) {
+      statusChangeCallback(response);
+    });
+  }
+
+</script> --}}
+
 </body>
 </html>
