comments and item cart pending

--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <link rel="stylesheet" href="/stylesheets/bootstrap-social.css" />
@@ -22,6 +23,7 @@
     <a href="/products">my products</a>
     <a href="/allProducts">all products</a>
     <a href="/allPosts">all posts</a>
+    <a href="/cart">cart</a>
 
     {{!-- <a href="/posts">posts for the public</a> --}}
   </nav>
