--- a/technow/views/products/product-details.hbs
+++ b/technow/views/products/product-details.hbs
@@ -1,6 +1,7 @@
-<h1>my own products</h1>
+<h2>detalles del product con id {{id}}</h2>
 
-{{#each products}}
+
+
 <br>
 Product name: {{name}}
 <br>
@@ -10,7 +11,3 @@ Product description: {{description}}
 <br>
 Price: ${{price}}
 <br>
-
-<a href="/edit-product/{{id}}">Edit post</a>
-
-{{/each}}
