--- a/technow/public/stylesheets/style.css
+++ b/technow/public/stylesheets/style.css
@@ -1,8 +1,16 @@
 body {
-  padding: 50px;
+  padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+
+h1 {
+  text-align: center; }
 
 a {
   color: #00B7FF; }
+
+.two-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around; }
 
 /*# sourceMappingURL=style.css.map */
