--- a/technow/views/auth/login.hbs
+++ b/technow/views/auth/login.hbs
@@ -1,38 +1,39 @@
-
-<h2>Login</h2>
-
-<form action="/login" method="POST" id="form-container">
-  <label for="email">Email</label>
-  <input id="email" type="text" name="email" placeholder="JonSnow">
-
-  <br><br>
-
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
+<div class="container">
   <br>
-  {{#if message }}
+  <h2>Login</h2>
+  <br>
+
+  <form action="/login" method="POST" id="form-container">
+
+    <div class="form-group">
+      <label for="email">Email address</label>
+      <input id="email" type="email" name="email" placeholder="Your email" class="form-control"
+        aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" name="password" placeholder="You password">
+    </div>
+    {{#if message }}
     <div class="error-message">{{ message }}</div>
-  {{/if}}
-
-  <br><br>
-
-  <button>Login</button>
-
-  <p class="account-message">
-    Don't have an account yet?
-    <a href="/auth/signup">Signup</a>
-  </p>
-  -OR-
-  <br>
-  <br>
-  <a href="/auth/google">Login with you Google Account</a>
-  <br>
-  <a  href="/auth/facebook">Login with you facebook Account</a>
-{{!--   
-  <a class="btn btn-block btn-social btn-twitter">
-    <span class="fa fa-twitter"></span> Sign in with Twitter
-  </a> --}}
-
-{{!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login with fb
-</fb:login-button> --}}
-</form>
+    {{/if}}
+ 
+    <button type="submit" class="btn btn-primary">Login</button>
+    <br>
+    <br>
+    <p class="account-message">
+      Don't have an account yet?
+      <br>
+      <a class="btn btn-primary" href="/auth/signup">Signup</a>
+    </p>
+    -OR-
+    <br>
+    <br>
+    <a class="btn btn-primary" href="/auth/google">Login with you Google Account</a>
+    <br>
+    <br>
+    <a class="btn btn-primary" href="/auth/facebook">Login with you facebook Account</a>
+  </form>
+</div>
