--- a/technow/views/auth/signup.hbs
+++ b/technow/views/auth/signup.hbs
@@ -1,35 +1,48 @@
-<h2>Signup</h2>
-
-<form action="/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="">
-<br><br>
-  <label for="email">Email</label>
-  <input id="email" type="text" name="email" placeholder="">
-
-  <br><br>
-
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
+<div class="container">
   <br>
-  {{#if message }}
+  <h2>Signup</h2>
+  <br>
+
+  <form action="/signup" method="POST" id="form-container">
+
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input id="username" type="text" name="username" placeholder="Your username" class="form-control">
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input id="email" type="email" name="email" placeholder="Your email" class="form-control" aria-describedby="emailHelp"
+        placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" class="form-control" id="password" name="password" placeholder="You password">
+    </div>
+
+    {{#if message }}
     <div class="error-message">{{ message }}</div>
-  {{/if}}
+    {{/if}}
 
-  <br><br>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <br>
+    <br>
+    <p class="account-message">
+      Do you already have an account?
+      <br>
+      <a class="btn btn-primary" href="/auth/login">Login</a>
+    </p>
+    -OR-
+    <br>
+    <br>
+    <a class="btn btn-primary" href="/auth/google">Login with you Google Account</a>
+    <br>
+    <br>
+    <a class="btn btn-primary" href="/auth/facebook">Login with you facebook Account</a>
+  </form>
+</div>
 
-  <button>Create account</button>
-
-  <p class="account-message">
-    Do you already have an account?
-    <a href="/auth/login">Login</a>
-  </p>
-  -OR-
-  <br>
-  <br>
-  <a href="/auth/google">Login with you Google Account</a>
 
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">Login with fb
-</fb:login-button>
-</form>
