--- a/technow/views/index.hbs
+++ b/technow/views/index.hbs
@@ -1,4 +1,49 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+  <br>
+  <h1>Find everything you need.</h1>
+  <br>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      {{!-- {{#each products}} --}}
+      <div class="carousel-item active">
+        <img style="width: auto; height: 500px" class="d-block w-100" src="{{carProducts.[0].imagePath}}" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img style="width: auto; height: 500px" class="d-block w-100" src="{{carProducts.[1].imagePath}}" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img style="width: auto; height: 500px" class="d-block w-100" src="{{carProducts.[2].imagePath}}" alt="Third slide">
+      </div>
+      {{!-- {{/each}} --}}
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <br>
+  <br>
 
 
+  <div class="row">
+    {{#each products}}
+    <div class="col-sm-12 col-md-6 col-lg-4">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="{{this.imagePath}}" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">{{this.name}}</h5>
+          <p class="card-text">About:{{this.description}}</p>
+          <span>Price: ${{this.price}}</span>
+          <p class="card-text">Posted by: {{this.owner.username}}</p>
+          <a href="/product-details/{{id}}" class="btn btn-primary">Product details</a>
+        </div>
+      </div>
+    </div>
+    {{/each}}
+  </div>
+
+</div>
