--- a/technow/views/posts/allPosts.hbs
+++ b/technow/views/posts/allPosts.hbs
@@ -1,36 +1,51 @@
-<h1>Posts para todos</h1>
+<br>
+<h1>Looking for reviews?</h1>
+<br>
 
-{{#each posts}}
+<div class="container">
+  <div class="row">
+    {{#each posts}}
+    <div class="col-sm-12 col-md-6 col-lg-6">
 
-<h2>{{creator.username}}</h2>
-<br>
-{{content}}
-<br>
-<img src="{{imagePath}}" alt="">
-<br>
-<a href="/post-details/{{id}}">Post details</a>
-<form action="/create-comment" method="post">
-  <div class="form-group">
-    <label for="content">Add a comment:</label>
-    <textarea name="content" id="content" cols="1" rows="3" class="form-control"> </textarea>
-    <input type="text" name="postId" hidden id="" value="{{id}}">
-    <button onclick="clearTextArea()" id="submit-comment-allPosts" class="btn btn-primary">Add comment</button>
-    
+      {{!-- <div class="card" style="width: 18rem;"> --}}
+      <div class="card" style="width: 400px; margin: 50px;">
+        <img style="width: auto; height: 300px" class="card-img-top" src="{{imagePath}}" alt="Card image cap">
+        <div class="card-body">
+          <h4 class="card-title">Title: {{name}}</h4>
+          <p class="card-text">{{content}}</p>
+          <span>Posted by: {{creator.username}}</span>
+          <br>
+          <br>
+          <a href="/post-details/{{id}}">Post details</a>
+          <form action="/create-comment" method="post">
+            <div class="form-group">
+              <label for="content">Add a comment:</label>
+              <textarea name="content" id="content" cols="1" rows="3" class="form-control"> </textarea>
+              <input type="text" name="postId" hidden id="" value="{{id}}">
+              <button onclick="clearTextArea()" id="submit-comment-allPosts" class="btn btn-primary">Add
+                comment</button>
+
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+
+    {{/each}}
   </div>
-</form>
-{{/each}}
+</div>
 
 <script>
-      function clearTextArea(){
-        console.log("adsdadasdasd")
-        const content = document.querySelectorAll('#content')
-        content.forEach(ele => {
-          if (ele.value !== ''){
-            ele.parentElement().parentElement().submit().then({
-              ele.value = ''
-            })
-          }
+  function clearTextArea() {
+    console.log("adsdadasdasd")
+    const content = document.querySelectorAll('#content')
+    content.forEach(ele => {
+      if (ele.value !== '') {
+        ele.parentElement().parentElement().submit().then({
+          ele.value = ''
         })
       }
+    })
+  }
 </script>
-
