--- a/technow/views/index.hbs
+++ b/technow/views/index.hbs
@@ -46,4 +46,27 @@
     {{/each}}
   </div>
 
+ 
+
+</div>
+<br>
+<section id="section-one">
+  <h1>Our customers believe in us. We provide the best market price for your gadgets.</h1>
+  <img
+    src="https://images.vexels.com/media/users/3/153025/isolated/preview/80c1cb16a0fe76e7fc3bd71081a1e8e4-icono-de-la-escuela-de-movimiento-atom-by-vexels.png"
+    alt="">
+</section>
+<div class="container-fluid">
+  <footer class="white-section" id="footer">
+    <div>
+      <i class="social-media-icons fab fa-twitter"></i>
+      <i class="social-media-icons fab fa-facebook-f"></i>
+      <i class="social-media-icons fab fa-instagram"></i>
+      <i class="social-media-icons fas fa-envelope"></i>
+    </div>
+
+    <p>© Copyright 2020 Tech2U</p>
+
+  </footer>
+
 </div>
