--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -7,6 +7,9 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <title>Tech2U</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
@@ -35,7 +38,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="/signup">Sign up <span class="sr-only">(current)</span></a>
         </li>
-        {{!-- {{#if user}} --}}
+        {{#if user}}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -50,11 +53,11 @@
             <a class="dropdown-item" href="/logout">Logout</a>
           </div>
         </li>
-        {{!-- {{/if}} --}}
+        {{/if}}
       </ul>
     </div>
   </nav>
-  {{user}}
+  {{!-- {{user}} --}}
   <nav>
     <a href="/">Home</a>
     <a href="/login">Login</a>
