--- a/technow/views/user/create-post.hbs
+++ b/technow/views/user/create-post.hbs
@@ -1,24 +1,26 @@
-<h2>Create a post</h2>
-<div class="row">
-  <div class="col-md-6">
-    <form action="/create-postt" method="post" enctype="multipart/form-data">
-
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name"/>
-      </div>
-
-      <div class="form-group">
-        <label for="content">Content:</label>
-        <textarea name="content" id="content" cols="30" rows="4" class="form-control"> </textarea>
-      </div>
-
-      <div class="form-group">
-        <label for="image-input">Image:</label>
-        <input type="file" name="image" id="image" class="form-control-file" />
-      </div>
-      
-      <button type="submit" class="btn btn-primary">Create</button>
-    </form>
+<div class="container">
+  <h2>Create a post</h2>
+  <div class="row">
+    <div class="col-md-12">
+      <form action="/create-postt" method="post" enctype="multipart/form-data">
+  
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input class="form-control" type="text" name="name" id="name" />
+        </div>
+  
+        <div class="form-group">
+          <label for="content">Content:</label>
+          <textarea name="content" id="content" cols="30" rows="4" class="form-control"> </textarea>
+        </div>
+  
+        <div class="form-group">
+          <label for="image-input">Image:</label>
+          <input type="file" name="image" id="image" class="form-control-file" />
+        </div>
+  
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
   </div>
 </div>
