--- a/technow/views/user/create-product.hbs
+++ b/technow/views/user/create-product.hbs
@@ -1,29 +1,33 @@
-<h2>Create product</h2>
-<div class="row">
-  <div class="col-md-6">
-    <form action="/create-productt" method="post" enctype="multipart/form-data">
+<div class="container">
+  <h2>Create product</h2>
+  <div class="row">
+    <div class="col-md-12">
+      <form action="/create-productt" method="post" enctype="multipart/form-data" >
+  
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input class="form-control" type="text" name="name" id="name" />
+        </div>
+  
+        <div class="form-group">
+          <label for="description">Description:</label>
+          <textarea name="description" id="description" cols="30" rows="4" class="form-control"> </textarea>
+        </div>
+  
+        <div class="form-group">
+          <label for="price">Price:</label>
+          <input class="form-control" type="text" name="price" id="price" />
+        </div>
+  
+        <div class="form-group">
+          <label for="image-input">Image:</label>
+          <input type="file" name="image" id="image" class="form-control-file" />
+        </div>
+  
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
 
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" name="name" id="name" />
-      </div>
 
-      <div class="form-group">
-        <label for="description">Description:</label>
-        <textarea name="description" id="description" cols="30" rows="4" class="form-control"> </textarea>
-      </div>
-
-      <div class="form-group">
-        <label for="price">Price:</label>
-        <input type="text" name="price" id="price" />
-      </div>
-
-      <div class="form-group">
-        <label for="image-input">Image:</label>
-        <input type="file" name="image" id="image" class="form-control-file" />
-      </div>
-
-      <button type="submit" class="btn btn-primary">Create</button>
-    </form>
+    </div>
   </div>
 </div>
