--- a/technow/views/user/posts.hbs
+++ b/technow/views/user/posts.hbs
@@ -1,14 +1,16 @@
-<h1>my own posts</h1>
-
-{{#each posts}}
-
-<h2>{{creator.username}}</h2>
-<br>
-{{content}}
-<br>
-<img src="{{imagePath}}" alt="">
-<br>
-{{!-- {{#if asdads}} --}}
-<a href="/edit-post/{{id}}">Edit post</a>
-{{!-- {{/if}} --}}
-{{/each}}
+<div class="container">
+  <h1>my own posts</h1>
+  
+  {{#each posts}}
+  
+  <h2>{{creator.username}}</h2>
+  <br>
+  {{content}}
+  <br>
+  <img src="{{imagePath}}" alt="">
+  <br>
+  {{!-- {{#if asdads}} --}}
+  <a href="/edit-post/{{id}}">Edit post</a>
+  {{!-- {{/if}} --}}
+  {{/each}}
+</div>
