--- a/technow/views/user/profile.hbs
+++ b/technow/views/user/profile.hbs
@@ -1,7 +1,22 @@
-<h1>Hola, bienvenido a tu profile!</h1>
-
-<a href="/create-post">Create post!</a>
+<div class="container">
+  <div>
+    <img src="" alt="">
+  </div>
+<div class="jumbotron">
+  <h1 class="display-4">Welcome to your profile {{user.username}}!</h1>
+  <br>
+  <p class="lead">Sell your gadgets quickly easily & effortlessly.</p>
+  <p class="lead">With Tech2U you can buy and sell your gadgets at the right price. Take a
+  look at review posts from other users! </p>
+  <hr class="my-4">
+  <p class="lead">Start publishing any product you want to sell or post a review from an item you got and help other users get what they're looking for! </p>
+  <br>
+<a href="/create-product" class="btn btn-outline-primary btn-lg btn-block" >Publish product</a>
 <br>
+<a href="/create-post" class="btn btn-outline-primary btn-lg btn-block" >Create Post</a>
 <br>
+</div>
 
-<a href="/create-product">Create product!</a>
+
+
+</div>
