--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -32,6 +32,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="/allPosts">Posts <span class="sr-only">(current)</span></a>
         </li>
+        
         {{!-- {{#unless user}} --}}
         {{#unless logged}}
 
@@ -43,6 +44,9 @@
         </li>
       {{/unless}}
         {{#if logged}}
+        <li class="nav-item active">
+          <a class="nav-link" href="/cart">Item Cart <span class="sr-only">(current)</span></a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -53,6 +57,7 @@
             <a class="dropdown-item" href="/products">My products</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/profile">Profile</a>
+            
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">Logout</a>
           </div>
