--- a/technow/views/user/cart.hbs
+++ b/technow/views/user/cart.hbs
@@ -1,9 +1,9 @@
 <h1>carrito</h1>
 <br>
 <br>
-{{itemCart._id}}
+{{!-- {{itemCart._id}} --}}
 {{#each items}}
-<h3>{{name}}</h3>
+<h3>{{name}} <a href="/cart/delete/{{_id}}">X {{_id}}</a></h3> 
 <h3>${{price}}</h3>
 {{/each}}
 <br>
