--- a/technow/public/stylesheets/style.css
+++ b/technow/public/stylesheets/style.css
@@ -42,4 +42,9 @@ a {
   text-align: center;
   padding: 4% 8%; }
 
+.mercadoPagoBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 /*# sourceMappingURL=style.css.map */
