--- a/technow/public/stylesheets/style.scss
+++ b/technow/public/stylesheets/style.scss
@@ -45,3 +45,8 @@ a {
   text-align: center;
   padding: 4% 8%;
 }
+.mercadoPagoBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
