--- a/technow/views/user/cart.hbs
+++ b/technow/views/user/cart.hbs
@@ -6,7 +6,7 @@
   <div class="row">
     {{#each items}}
     <div class="col-sm-12 col-md-6 col-lg-6">
-      <div class="card" style="width: 18rem;">
+      <div class="card" style="width: 18rem; margin: 0 auto">
         <img style="width: auto; height: 300px" class="card-img-top" src="{{imagePath}}" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">{{name}} </h5>
