--- a/technow/views/user/posts.hbs
+++ b/technow/views/user/posts.hbs
@@ -5,7 +5,7 @@
   <div class="row">
     {{#each posts}}
     <div class="col-sm-12 col-md-12 col-lg-12">
-      <div class="card" style="width: 600px; margin: 50px;">
+      <div class="card" style="width: 600px; margin: 0 auto">
         <img style="width: auto; height: 300px" class="card-img-top" src="{{imagePath}}" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">{{name}}</h4>
