--- a/technow/public/stylesheets/style.scss
+++ b/technow/public/stylesheets/style.scss
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body {
   padding: 0;
+  // font-family: Roboto;
+  // font-size: 10px;
+  // line-height: 3.5em;
+  // font-weight: 300;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 h1,h2 {
@@ -50,3 +55,4 @@ a {
   justify-content: center;
   align-items: center;
 }
+
