--- a/technow/views/user/edit-post.hbs
+++ b/technow/views/user/edit-post.hbs
@@ -1,30 +1,31 @@
-<h2>Edit post</h2>
-<div class="row">
-  <div class="col-md-6">
-    <form action="/edit-post/{{_id}}" method="post" enctype="multipart/form-data">
+<div class='container'>
+  <h2>Edit your post</h2>
+  <div class="row">
+    <div class="col-md-12">
+      <form action="/edit-post/{{_id}}" method="post" enctype="multipart/form-data">
 
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input value='{{name}}'type="text" name="name" id="name" />
-      </div>
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input class="form-control" value='{{name}}' type="text" name="name" id="name" />
+        </div>
 
-      <div class="form-group">
-        <label for="content">Content:</label>
-        <textarea name="content" id="content" cols="30" rows="4" class="form-control">{{content}} </textarea>
-      </div>
+        <div class="form-group">
+          <label for="content">Content:</label>
+          <textarea name="content" id="content" cols="30" rows="4" class="form-control">{{content}} </textarea>
+        </div>
 
-      <div class="form-group">
-        <label for="image-input">Chose another image:</label>
-        <input type="file" name="image" id="image" class="form-control-file" />
-        <input type="text" name="existingImage" hidden id="" value="{{imagePath}}">
-      </div>
+        <div class="form-group">
+          <label for="image-input">Chose another image:</label>
+          <input type="file" name="image" id="image" class="form-control-file" />
+          <input type="text" name="existingImage" hidden id="" value="{{imagePath}}">
+        </div>
 
-      <a href="/delete-post/{{_id}}">Delete post</a>
-      <br>
-      <br>
-      <button type="submit" class="btn btn-primary">Create</button>
-    </form>
+        <a href="/delete-post/{{_id}}">Delete post</a>
+        <br>
+        <br>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
   </div>
+
 </div>
-
-
