--- a/technow/views/user/edit-product.hbs
+++ b/technow/views/user/edit-product.hbs
@@ -1,33 +1,36 @@
-<h2>Edit product!!</h2>
-<div class="row">
-  <div class="col-md-6">
-    <form action="/edit-product/{{_id}}" method="post" enctype="multipart/form-data">
+<div class="container">
+  <h2>Edit your product</h2>
+  <div class="row">
+    <div class="col-md-12">
+      <form action="/edit-product/{{_id}}" method="post" enctype="multipart/form-data">
 
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input value='{{name}}' type="text" name="name" id="name" />
-      </div>
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input class="form-control" value='{{name}}' type="text" name="name" id="name" />
+        </div>
 
-      <div class="form-group">
-        <label for="description">Description:</label>
-        <textarea name="description" id="description" cols="30" rows="4" class="form-control">{{description}} </textarea>
-      </div>
+        <div class="form-group">
+          <label for="description">Description:</label>
+          <textarea name="description" id="description" cols="30" rows="4"
+            class="form-control">{{description}} </textarea>
+        </div>
 
-      <div class="form-group">
-        <label for="price">Price:</label>
-        <input value='{{price}}' type="text" name="price" id="price" />
-      </div>
+        <div class="form-group">
+          <label for="price">Price:</label>
+          <input value='{{price}}' type="text" name="price" id="price" />
+        </div>
 
-      <div class="form-group">
-        <label for="image-input">Chose another image:</label>
-        <input type="file" name="image" id="image" class="form-control-file" />
-        <input type="text" name="existingImage" hidden id="" value="{{imagePath}}">
-      </div>
+        <div class="form-group">
+          <label for="image-input">Chose another image:</label>
+          <input type="file" name="image" id="image" class="form-control-file" />
+          <input type="text" name="existingImage" hidden id="" value="{{imagePath}}">
+        </div>
 
-      <a href="/delete-product/{{_id}}">Delete post</a>
-      <br>
-      <br>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+        <a href="/delete-product/{{_id}}">Delete post</a>
+        <br>
+        <br>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
   </div>
 </div>
