--- a/technow/views/user/products.hbs
+++ b/technow/views/user/products.hbs
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     {{#each products}}
-    <div class="col-sm-12 col-md-12 col-lg-12">
+    <div class="col-sm-12 col-md-6 col-lg-6">
       <div class="card" style="width: 500px;">
         <img style="width: auto; height: 300px" class="card-img-top" src="{{imagePath}}" alt="Card image cap">
         <div class="card-body">
@@ -15,7 +15,7 @@
           <br>
           <div class="two-btns">
             <a href="/product-details/{{id}}" class="btn btn-primary">See more</a>
-            <a href="/edit-product/{{id}}" class="btn btn-primary">Edit post</a>
+            <a href="/edit-product/{{id}}" class="btn btn-primary">Edit product</a>
           </div>
         </div>
       </div>
