--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -66,6 +66,20 @@
   </nav>
 
   {{{body}}}
+  <div class="container-fluid">
+    <footer class="white-section" id="footer">
+      <div>
+        <i class="social-media-icons fab fa-twitter"></i>
+        <i class="social-media-icons fab fa-facebook-f"></i>
+        <i class="social-media-icons fab fa-instagram"></i>
+        <i class="social-media-icons fas fa-envelope"></i>
+      </div>
+  
+      <p>© Copyright 2020 Tech2U</p>
+  
+    </footer>
+  
+  </div>
 
   <script src="/javascripts/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
