--- a/technow/views/products/product-details.hbs
+++ b/technow/views/products/product-details.hbs
@@ -3,7 +3,7 @@
   <h1>{{name}}</h1>
 <br>
   <div class="col-sm-12 col-md-12 col-lg-12">
-    <div class="card" style="width: 60vw;">
+    <div class="card" style="width: 60vw; margin: 0 auto">
       <img style="max-width: 300px; height: 300px; margin: 0 auto" class="card-img-top" src="{{imagePath}}" alt="Card image cap">
       <div class="card-body">
         <h5 style='text-align:center;' class="card-title">{{name}} </h5>
