--- a/technow/views/user/cart.hbs
+++ b/technow/views/user/cart.hbs
@@ -20,7 +20,7 @@
   </div>
   <br>
   <br>
-  <a class="btn btn-primary btn-lg btn-block" href="/cart/{{itemCart._id}}">Ir a pagar Carrito</a>
+  <a class="btn btn-primary btn-lg btn-block" href="/cart/{{itemCart._id}}">Checkout   <span><i class="far fa-credit-card"></i></span></a>
   <br>
 
 </div>
