purchase view fixed

--- a/technow/views/user/buycart.hbs
+++ b/technow/views/user/buycart.hbs
@@ -12,11 +12,19 @@
   <br>
   <br>
   <div class="mercadoPagoBtn"> 
-
-    <form method="POST" action="/cart">
+  <br>
+    <form method="POST" action="/purchase">
       <script src="https://www.mercadopago.com.mx/integrations/v1/web-payment-checkout.js"
         data-preference-id='{{itemCart.preferenceId}}'>
         </script>
     </form>
+    <br>
+    <br>
   </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 </div>
