--- a/technow/views/layout.hbs
+++ b/technow/views/layout.hbs
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <title>Tech2U</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Ubuntu:wght@300;400;500&display=swap"
+    rel="stylesheet">
+    
   <link rel="stylesheet" href="/stylesheets/style.css" />
+
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Tech2U</a>
@@ -20,7 +27,7 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -32,7 +39,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="/allPosts">Posts <span class="sr-only">(current)</span></a>
         </li>
-   
+
         {{#unless logged}}
         <li class="nav-item active">
           <a class="nav-link" href="/login">Login <span class="sr-only">(current)</span></a>
@@ -40,7 +47,7 @@
         <li class="nav-item active">
           <a class="nav-link" href="/signup">Signup <span class="sr-only">(current)</span></a>
         </li>
-      {{/unless}}
+        {{/unless}}
         {{#if logged}}
         <li class="nav-item active">
           <a class="nav-link" href="/cart">Item Cart <span class="sr-only">(current)</span></a>
@@ -55,7 +62,7 @@
             <a class="dropdown-item" href="/products">My products</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/profile">Profile</a>
-            
+
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout">Logout</a>
           </div>
@@ -74,17 +81,20 @@
         <i class="social-media-icons fab fa-instagram"></i>
         <i class="social-media-icons fas fa-envelope"></i>
       </div>
-  
+
       <p>© Copyright 2020 Tech2U</p>
-  
+
     </footer>
-  
+
   </div>
 
   <script src="/javascripts/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
