--- a/technow/views/posts/post-details.hbs
+++ b/technow/views/posts/post-details.hbs
@@ -11,7 +11,8 @@
       <div class="card-body">
         <h5 style='text-align:center;' class="card-title">{{name}} </h5>
         <span><b>About:</b>{{content}}</span>
-        <span>autor: {{creator.username}}</span>
+        <br>
+        <span><b>Creator:</b> {{creator.username}}</span>
         <br>
       </div>
     </div>
